<resources>
    <string name="app_name">Bean Barrel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bean Barel</string>
    <string name="nav_header_subtitle">www.beanbarel.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Add Items</string>
    <string name="menu_slideshow">Analytics</string>
    <string name="welcome">Welcome</string>
    <string name="take_order_with_ease">Take Order with ease.</string>
    <string name="search_product">Search product...</string>
    <string name="current_order">Current Order</string>
    <string name="subtotal">Subtotal</string>
    <string name="total_sale_tax">Total Sale Tax</string>
    <string name="total">Total</string>
    <string name="about">About</string>
    <string name="addnewtem">Add New Item</string>
    <string name="add_new_item">Add New Item</string>
    <string name="categorised">Categorised</string>
    <string-array name="payment_methods">
        <item>Cash</item>
        <item>Card</item>
        <item>UPI</item>

    </string-array>
</resources>