<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.zeezaglobal.posresturant.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.zeezaglobal.posresturant.ui.addNewItem.AddNewItemFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_add_new" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.zeezaglobal.posresturant.ui.slideshow.AnalyticsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_analytics" />
</navigation>